fix misalignment

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -1005,9 +1005,13 @@
 }
 
 @media (max-width: 767.98px) {
-  .repository.view.issue .comment-list .comment .content .form .button {
+  .repository.view.issue .comment-list .comment .content .form .buttons,
+  .repository.view.issue .comment-list .comment .content .form .button:not(.dropdown-item) {
     width: 100%;
     margin: 0;
+  }
+  .repository.view.issue .comment-list .comment .content .form .buttons .ui.dropdown {
+    flex: none;
   }
   .repository.view.issue .comment-list .comment .content .form .button:not(.comment-button) {
     margin-bottom: 1rem;
